[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "dr3-osint"
version = "2.0.0"
description = "🔍 AI-Powered Digital Intelligence Platform for OSINT Investigation"
authors = ["DR3"]
readme = "README.md"
license = "MIT"
packages = [{include = "dr3"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
aiohttp = "^3.11.0"
websockets = "^14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25.0"

[tool.poetry.group.ai.dependencies]
google-generativeai = "^0.8.0"

[tool.poetry.scripts]
dr3 = "dr3.__main__:main"
